--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cubit: ^0.1.2
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.9.1
@@ -37,6 +36,7 @@ dependencies:
     sdk: flutter
   go_router: ^17.0.1
   google_fonts: ^8.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
