--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   equatable: ^2.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
+  get_it: ^9.2.0
   go_router: ^17.0.1
   google_fonts: ^8.0.0
-  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
